[package]
name = "neo-params"
version = "0.1.0"
edition = "2021"
authors = ["Nico Arqueros <nico.arquerosr@gmail.com>"]
description = "Nightstream parameter sets with validation and sum-check soundness policy"
license = "Apache-2.0"
rust-version = "1.88"

[lints]
workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = "1"
