[package]
name = "neo-quickcheck-tests"
version = "0.1.0"
edition = "2021"
authors = ["Nico Arqueros <nico.arquerosr@gmail.com>"]
description = "Property-based and quickcheck tests for Neo protocol - comprehensive property verification"
license = "MIT OR Apache-2.0"
publish = false

[features]
default = []
quickcheck = []

# Everything below is only needed for tests. Keep them as dev-deps so normal builds don't pull them in.
[dev-dependencies]
# Local crates under test
neo = { path = "../neo" }
neo-ccs = { path = "../neo-ccs" }
neo-fold = { path = "../neo-fold" }
neo-spartan-bridge = { path = "../neo-spartan-bridge" }
neo-math = { path = "../neo-math" }
neo-ajtai = { path = "../neo-ajtai" }

# Test libraries
proptest = { workspace = true }
quickcheck = "1.0"
quickcheck_macros = "1.0"
rand = { workspace = true }

# Required dependencies for trait calls and types used in tests
spartan2 = { workspace = true }
bellpepper-core = { version = "0.4" }
p3-field = { workspace = true }
p3-goldilocks = { workspace = true }
anyhow = { workspace = true }
