[package]
name = "neo-redteam-tests"
version = "0.1.0"
edition = "2021"
authors = ["Nico Arqueros <nico.arquerosr@gmail.com>"]
description = "Red-team security tests for Neo protocol - vulnerability detection and exploit verification"
license = "MIT OR Apache-2.0"

[features]
default = []
redteam = []

[dependencies]
neo = { path = "../neo" }
neo-params = { path = "../neo-params" }
neo-math = { path = "../neo-math" }
neo-ajtai = { path = "../neo-ajtai" }
neo-challenge = { path = "../neo-challenge" }
neo-ccs = { path = "../neo-ccs" }
neo-fold = { path = "../neo-fold" }
neo-spartan-bridge = { path = "../neo-spartan-bridge" }
rand = { workspace = true }
anyhow = { workspace = true }
p3-goldilocks = { workspace = true }
p3-field = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
