[package]
name = "neo-spartan-bridge"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[features]
default = []
debug-logs = []

[dependencies]
# Core utilities
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
rand = { workspace = true }

# p3 ecosystem used ONLY for Poseidon2 FS transcript over Goldilocks
p3-field = { workspace = true }
p3-goldilocks = { workspace = true }
p3-challenger = { workspace = true }
p3-poseidon2 = { workspace = true }
p3-symmetric = { workspace = true }

# For error handling in PCS
anyhow = { workspace = true }

# For proof serialization
bincode = { workspace = true }

# For deterministic Poseidon2 seeding
rand_chacha = { workspace = true }

# Neo workspace dependencies for ME types and Ajtai commitments
neo-ccs = { path = "../neo-ccs" }
neo-math = { version = "0.1.0", path = "../neo-math" }
neo-ajtai = { version = "0.1.0", path = "../neo-ajtai" }

# Spartan2 fork with Hash-MLE PCS
spartan2 = { workspace = true }
ff = { workspace = true }
bellpepper-core = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
