[package]
name = "neo-spartan-bridge"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[features]
default = []
# Forward neo-transcript debug logging so tests can enable transcript dumps on stable
debug-logs = ["neo-transcript", "neo-transcript/debug-log"]  # Available but not used by default
# Enable verbose logging for debugging (OFF by default for security - CWE-532)
neo-logs = []
# Expose testing utilities without making them part of the stable API
testing = []
# Dev-only toggles (e.g., env switch to disable constraints) — NEVER enable in production
neo_dev_only = []

[dependencies]
once_cell = "1.19"
dashmap = "5.5"
blake3 = { workspace = true }
# Bring in neo-transcript as optional so we can forward its debug-log feature for tests
neo-transcript = { path = "../neo-transcript", optional = true }
# Core utilities
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
rand = { workspace = true }

# p3 ecosystem used ONLY for Poseidon2 FS transcript over Goldilocks
p3-field = { workspace = true }
p3-goldilocks = { workspace = true }
p3-challenger = { workspace = true }
p3-poseidon2 = { workspace = true }
p3-symmetric = { workspace = true }

# For error handling in PCS
anyhow = { workspace = true }

# For proof serialization
bincode = { workspace = true }


# For deterministic Poseidon2 seeding
rand_chacha = { workspace = true }

# For constant-time comparisons
subtle = { workspace = true }

# For secure logging (gated behind neo-logs feature)
tracing = { version = "0.1", default-features = false, features = ["std"] }

# Neo workspace dependencies for ME types and Ajtai commitments
neo-ccs = { path = "../neo-ccs" }
neo-math = { version = "0.1.0", path = "../neo-math" }
neo-ajtai = { version = "0.1.0", path = "../neo-ajtai" }

# Spartan2 fork with Hash-MLE PCS
spartan2 = { workspace = true }
ff = { workspace = true }
bellpepper-core = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
