[package]
name = "neo"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Neo: simple facade (prove/verify) over Ajtai+Folding+Spartan2"
authors = ["Nico Arqueros <nico.arquerosr@gmail.com>"]
rust-version = "1.88"

[features]
default = []
debug-logs = ["neo-spartan-bridge/debug-logs"]
# Enable comprehensive logging across all Neo components 
neo-logs = ["neo-spartan-bridge/neo-logs", "neo-ccs/neo-logs", "neo-ajtai/neo-logs"]

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true, features = ["derive"] }
rand = { workspace = true }
rayon = { workspace = true }
p3-field = { workspace = true }
p3-goldilocks = { workspace = true }
p3-symmetric = { workspace = true }
rand_chacha = { workspace = true }
subtle = { workspace = true }

# For structured logging (gated behind neo-logs feature)
tracing = { version = "0.1", default-features = false, features = ["std"] }

neo-params = { path = "../neo-params" }
neo-math   = { path = "../neo-math" }
neo-ajtai  = { path = "../neo-ajtai" }
neo-ccs    = { path = "../neo-ccs" }
neo-fold   = { path = "../neo-fold" }
neo-spartan-bridge = { path = "../neo-spartan-bridge" }

[dev-dependencies]
rand = { workspace = true }
mimalloc = { workspace = true }
num_cpus = { workspace = true }
num-bigint = "0.4"  # For examples only
# Enable testing features for security tests
neo-spartan-bridge = { path = "../neo-spartan-bridge", features = ["testing"] }

